<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cadastroActivity"
    android:background="#BAA896EA"

    >

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/nome_completo"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginEnd="32dp"
      android:alpha="0.6"
      android:layout_marginTop="30dp"
      android:textColorHint="@color/purple_500"
      app:boxBackgroundColor="@color/purple_200"
      app:endIconMode="clear_text"
      app:endIconTint="@color/purple_500"
      app:errorTextAppearance="@color/purple_500"
      app:helperTextTextColor="@color/purple_500"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:startIconDrawable="@drawable/ic_person"
      app:startIconTint="@color/purple_500"
      tools:ignore="MissingConstraints">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/nomeCompleto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome_completo"
        android:maxLength="20" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/senhaCadastro"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginEnd="32dp"
      android:alpha="0.6"
      android:textColorHint="@color/purple_500"
      app:boxBackgroundColor="@color/purple_200"
      app:endIconMode="password_toggle"
      app:endIconTint="@color/purple_500"
      app:errorTextAppearance="@color/purple_500"
      app:helperTextTextColor="@color/purple_500"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/nome_completo"
      app:passwordToggleEnabled="true"
      app:passwordToggleTint="@color/purple_500"
      app:startIconDrawable="@drawable/ic_cadeado"
      app:startIconTint="@color/purple_500">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/senhaRegistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/senha_login"
        android:inputType="textPassword"
        android:maxLength="20"
        app:layout_constraintBottom_toTopOf="@+id/btn_logar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textImpuLayout" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/confirmarSenha"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginEnd="32dp"
      android:alpha="0.6"
      android:textColorHint="@color/purple_500"
      app:boxBackgroundColor="@color/purple_200"
      app:endIconMode="password_toggle"
      app:endIconTint="@color/purple_500"
      app:errorTextAppearance="@color/purple_500"
      app:helperTextTextColor="@color/purple_500"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/senhaCadastro"
      app:passwordToggleEnabled="true"
      app:passwordToggleTint="@color/purple_500"
      app:startIconDrawable="@drawable/ic_cadeado"
      app:startIconTint="@color/purple_500">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/compararSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirme_senha"
        android:inputType="textPassword"
        android:maxLength="20"
        app:layout_constraintBottom_toTopOf="@+id/btn_logar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textImpuLayout" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/email_registro"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:alpha="0.6"
      android:textColorHint="@color/purple_500"
      app:boxBackgroundColor="@color/purple_200"
      app:endIconMode="clear_text"
      app:endIconTint="@color/purple_500"
      app:errorTextAppearance="@color/purple_500"
      app:helperTextTextColor="@color/purple_500"
      android:layout_marginHorizontal="32dp"
      app:layout_constraintTop_toBottomOf="@+id/confirmarSenha"
      app:startIconDrawable="@drawable/ic_email"
      app:startIconTint="@color/purple_500"
      tools:ignore="MissingConstraints">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/emailRegistro"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_registro"
        android:maxLength="20" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/foto_registro"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:alpha="0.6"
      android:textColorHint="@color/purple_500"
      app:boxBackgroundColor="@color/purple_200"
      app:endIconMode="clear_text"
      app:endIconTint="@color/purple_500"
      app:errorTextAppearance="@color/purple_500"
      app:helperTextTextColor="@color/purple_500"
      android:layout_marginHorizontal="32dp"
      app:layout_constraintTop_toBottomOf="@+id/email_registro"
      app:startIconDrawable="@drawable/ic_camera"
      app:startIconTint="@color/purple_500"
      tools:ignore="MissingConstraints">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/fotoRegistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fotoRegistro"
        android:maxLength="20" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/tipoUsuario"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="32dp"
      android:layout_marginTop="5dp"
      android:alpha="0.5"
      android:hint="@string/tipo_usuario_select"
      android:textColorHint="#591CB0"
      app:boxBackgroundColor="#C8ADE8"
      app:flow_horizontalBias="0.0"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/foto_registro"
      android:outlineAmbientShadowColor="@color/purple_200">

    <AutoCompleteTextView
        android:id="@+id/tipo_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="none" />

  </com.google.android.material.textfield.TextInputLayout>

  <EditText
      android:id="@+id/et_token"
      android:layout_width="200dp"
      android:layout_height="40dp"
      android:layout_marginBottom="10dp"
      android:hint="@string/txt_token"
      android:textAlignment="center"
      android:textColorHint="@color/purple_200"
      android:visibility="invisible"
      android:background="@drawable/bg_gradient"
      android:alpha="0.4"
      app:layout_constraintBottom_toTopOf="@+id/btn_registrar"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tipoUsuario"
      app:layout_constraintVertical_bias="0.52" />


  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/btn_registrar"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="50dp"
      android:layout_marginBottom="30dp"
      android:alpha="0.5"
      android:background="@drawable/bg_gradient"
      android:elevation="2dp"
      android:outlineAmbientShadowColor="@color/black"
      android:text="@string/criar_conta"
      android:textAlignment="center"
      android:textColor="#D7C1FF"
      app:cornerRadius="18dp"
      app:iconTint="@color/purple_200"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      />

  <ProgressBar
      android:id="@+id/progressBar"
      style="?android:attr/progressBarStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      tools:layout_editor_absoluteX="163dp"
      tools:layout_editor_absoluteY="435dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      android:layout_marginTop="10dp"
      app:layout_constraintStart_toStartOf="parent"
      android:visibility="gone"/>


</androidx.constraintlayout.widget.ConstraintLayout>